--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="experiment-area">
             <h2>Experiment Name</h2>
-            <canvas id="simulationCanvas"></canvas> <!-- For interactive visuals -->
+            <canvas id="simulationCanvas"></canvas> 
         </section>
 
         <section id="controls">
